fix topic body-truncated

--- a/app/assets/stylesheets/blocks/b-topic.sass
+++ b/app/assets/stylesheets/blocks/b-topic.sass
@@ -51,6 +51,14 @@
       .about + .time
         padding-left: 5px
 
+    .body-truncated
+      max-height: 172px
+      overflow: hidden
+      position: relative
+
+      .b-height_shortener .expand
+        margin-top: -6px
+
     // &>footer
       // +ellipsis2
       // color: #555
